feature(http-server): add oidc login
